fixed the loop counter

--- a/KYF2-analysis.ipynb
+++ b/KYF2-analysis.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "code",
    "execution_count": 112,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -31,6 +32,7 @@
    "cell_type": "code",
    "execution_count": 113,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -78,6 +80,7 @@
    "cell_type": "code",
    "execution_count": 121,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -106,6 +109,7 @@
    "cell_type": "code",
    "execution_count": 122,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -143,6 +147,7 @@
    "cell_type": "code",
    "execution_count": 123,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -281,6 +286,7 @@
    "cell_type": "code",
    "execution_count": 124,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -1418,6 +1424,7 @@
    "cell_type": "code",
    "execution_count": 125,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -1486,6 +1493,7 @@
    "cell_type": "code",
    "execution_count": 126,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -1757,6 +1765,7 @@
    "cell_type": "code",
    "execution_count": 127,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -1848,6 +1857,7 @@
    "cell_type": "code",
    "execution_count": 171,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -2041,6 +2051,7 @@
    "cell_type": "code",
    "execution_count": 172,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -2121,6 +2132,7 @@
    "cell_type": "code",
    "execution_count": 133,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -2217,6 +2229,7 @@
    "cell_type": "code",
    "execution_count": 135,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -2297,6 +2310,7 @@
    "cell_type": "code",
    "execution_count": 137,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -2442,6 +2456,7 @@
    "cell_type": "code",
    "execution_count": 138,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -2489,6 +2504,7 @@
    "cell_type": "code",
    "execution_count": 140,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -3210,6 +3226,7 @@
    "cell_type": "code",
    "execution_count": 158,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -3550,6 +3567,7 @@
    "cell_type": "code",
    "execution_count": 159,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -3598,6 +3616,7 @@
    "cell_type": "code",
    "execution_count": 163,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -3799,6 +3818,7 @@
    "cell_type": "code",
    "execution_count": 164,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -4184,6 +4204,7 @@
    "cell_type": "code",
    "execution_count": 165,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -4243,6 +4264,7 @@
    "cell_type": "code",
    "execution_count": 168,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -4373,6 +4395,7 @@
    "cell_type": "code",
    "execution_count": 169,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -4418,6 +4441,7 @@
    "cell_type": "code",
    "execution_count": 177,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -4552,6 +4576,7 @@
    "cell_type": "code",
    "execution_count": 187,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -4585,6 +4610,7 @@
    "cell_type": "code",
    "execution_count": 189,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -4666,6 +4692,7 @@
    "cell_type": "code",
    "execution_count": 190,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -4763,6 +4790,7 @@
    "cell_type": "code",
    "execution_count": 186,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -5261,6 +5289,7 @@
    "cell_type": "code",
    "execution_count": 185,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -5437,6 +5466,7 @@
    "cell_type": "code",
    "execution_count": 209,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -5498,7 +5528,7 @@
     "\n",
     "details = {}\n",
     "counter = 0\n",
-    "for loc in sample_states_geo:\n",
+    "for counter , loc in enumerate(sample_states_geo):\n",
     "    ln ='-----------------'\n",
     "    try:\n",
     "        details[counter] = {}\n",
@@ -5539,7 +5569,7 @@
     "            cd=flds['congressional_district']['district_number']\n",
     "            details[counter] = {}\n",
     "            details[counter]['cd'] = cd\n",
-    "            counter += 1\n",
+    "            \n",
     "        else:\n",
     "            print ln, counter,ln\n",
     "            print fields\n",
@@ -5564,11 +5594,11 @@
     "            details[counter]['sl'] = sl\n",
     "            details[counter]['su'] = su\n",
     "            details[counter]['county'] = county\n",
-    "            counter += 1\n",
+    "            \n",
     "    except IndexError:\n",
     "        print ln, counter,ln\n",
     "        print 'there is no loc.values()[0][0]', loc\n",
-    "        counter += 1\n",
+    "        \n",
     "print details\n",
     "\n",
     "\n",
@@ -5826,21 +5856,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
