--- a/KYF2-analysis.ipynb
+++ b/KYF2-analysis.ipynb
@@ -1632,8 +1632,10 @@
    "source": [
     "grantor = pd.DataFrame(kyf2['Name'].value_counts())\n",
     "grantor.reset_index(inplace=True)\n",
-    "Chart(grantor).mark_bar().encode(y=Y('index:N', sort=SortField(field='Name', order='ascending'),\n",
-    "        axis=Axis(title='Grant Program')), x='Name:Q').configure_axis(tickLabelFontSize=12, labelMaxLength=300)"
+    "Chart(grantor).mark_bar()\n",
+    ".encode(y=Y('index:N', sort=SortField(field='Name', order='ascending'),\n",
+    "        axis=Axis(title='Grant Program')), x='Name:Q')\n",
+    ".configure_axis(tickLabelFontSize=12, labelMaxLength=300)"
    ]
   },
   {
@@ -8175,7 +8177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
