create exports for maps

--- a/KYF2-analysis.ipynb
+++ b/KYF2-analysis.ipynb
@@ -42,7 +42,6 @@
     "\n",
     "from geocodio import GeocodioClient\n",
     "# geocodio_api_key = os.getenv('GEOCODIO_API_KEY')\n",
-    "geocodio_api_key = '0f669aa4d57d7dab0ba9b8dd049a9957678985d'\n",
     "client = GeocodioClient(geocodio_api_key)"
    ]
   },
@@ -5497,6 +5496,59 @@
    "source": [
     "corr = kyf2.corr()\n",
     "sns.heatmap(corr, linewidths= 0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kyf2.to_csv('kyf2_output.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kyf2['cd'] = kyf2['Congressional District'].str[0:2]+ '-'+kyf2['Congressional District'].str[2:].str.pad(2, side='left', fillchar='0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "457     CA-50\n",
+       "1470    MA-02\n",
+       "2266    NC-07\n",
+       "840     HI-02\n",
+       "1491    MA-01\n",
+       "Name: cd, dtype: object"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kyf2['cd'].sample(5).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "funding_by_cd = pd.DataFrame(kyf2.groupby('cd')['Funding'].sum())\n",
+    "funding_by_cd.to_excel('kyf2_funding_by_cd.xls')"
    ]
   },
   {
